--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"license": "MIT",
 	"private": true,
 	"devDependencies": {
-		"gulp": "3.8.11"
+		"gulp": "3.8.11",
+		"gulp-compass": "latest",
+		"gulp-plumber": "latest",
+		"gulp-notify": "latest"
 	}
 }
