--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 markdown: redcarpet
 exclude: ["vendor", "Gemfile", "Gemfile.lock", "README.md", "sass", "gulpfile.js", "package.json", "config.rb", "ejs", "node_modules"]
 source: "jekyll_sources"
+destination: "htdocs"
