--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"postinstall": "gulp init"
 	},
 	"dependencies": {
-		"font-awesome": "4.3.0"
+		"font-awesome": "4.3.0",
+		"smooth-scroll": "cferdinandi/smooth-scroll"
 	},
 	"devDependencies": {
 		"gulp": "3.8.11",
